# LyraBot

./: .env  .gitattributes  .gitignore  .lfsconfig  README.md  advanced_github_fix.bat  check_dependencies.py  clean_reinstall.bat  clean_repository.bat  config.yml  consolidate_repository.bat  conversation_history.db  conversation_history.json  conversation_log.txt  conversation_tracker.db  db_fix.py  domain.yml  download_models.py  endpoints.yml  fix_android_errors.bat  fix_android_sdk_error.bat  fix_database.bat  fix_github_env.bat  fix_submodule_error.bat  git_integration.py  github_fix.bat  increase_pagefile.ps1  install_and_run_lyra.py  install_dependencies.py  install_rasa.bat  install_with_poetry.bat  lyra_cli.py  lyra_config.json  master_repository_fix.bat  model_manager.py  push_to_github.bat  pyproject.toml  requirements.txt  resolve_dependencies.py  run_dependencies.bat  (+18 more)
.ignore/: commoncmds.txt
.rasa/cache/: cache.db
.rasa/cache/tmp2_r2u8wr/: vocabularies.json
.rasa/cache/tmp2kl1es15/: memorized_turns.json
.rasa/cache/tmp2lw0zcky/: featurizer.json  ted_policy.tf_model.data-00000-of-00001  ted_policy.tf_model.index
.rasa/cache/tmp2otx8jm8/: vocabularies.pkl
.rasa/cache/tmp2w6diafp/: vocabularies.pkl
.rasa/cache/tmp2x21pe9y/: memorized_turns.json
.rasa/cache/tmp30cvtsj6/: vocabularies.json
.rasa/cache/tmp4718bfx0/: DIETClassifier.data_example.pkl  DIETClassifier.tf_model.index
.rasa/cache/tmp4_gmj5ea/: DIETClassifier.tf_model.index
.rasa/cache/tmp4jz85w0k/: ted_policy.data_example.pkl  ted_policy.tf_model.data-00000-of-00001  ted_policy.tf_model.index
.rasa/cache/tmp4w4h5z31/: memorized_turns.json
.rasa/cache/tmp53onulgl/: featurizer.json  unexpected_intent_policy.data_example.pkl  unexpected_intent_policy.label_quantiles.pkl  unexpected_intent_policy.tf_model.data-00000-of-00001  unexpected_intent_policy.tf_model.index
.rasa/cache/tmp63m4p8bs/: DIETClassifier.index_label_id_mapping.json  DIETClassifier.sparse_feature_sizes.pkl  DIETClassifier.tf_model.index
.rasa/cache/tmp6n02zb_j/: ted_policy.tf_model.data-00000-of-00001  ted_policy.tf_model.index
.rasa/cache/tmp6s4yrx4s/: vocabularies.pkl
.rasa/cache/tmp6yev81fz/: DIETClassifier.sparse_feature_sizes.pkl  DIETClassifier.tf_model.index
.rasa/cache/tmp7cxml8ay/: rule_policy.json
.rasa/cache/tmp97dvl21n/: vocabularies.pkl
.rasa/cache/tmp9lvapibd/: featurizer.json  unexpected_intent_policy.data_example.pkl  unexpected_intent_policy.label_quantiles.pkl  unexpected_intent_policy.tf_model.data-00000-of-00001  unexpected_intent_policy.tf_model.index
.rasa/cache/tmp_beegwcg/: vocabularies.json
.rasa/cache/tmpa97s3y1b/: featurizer.json  ted_policy.tf_model.data-00000-of-00001  ted_policy.tf_model.index
.rasa/cache/tmpaex6_0w3/: rule_policy.json
.rasa/cache/tmpb4hbfszq/: DIETClassifier.data_example.pkl  DIETClassifier.tf_model.index
.rasa/cache/tmpb9l67m4y/: rule_policy.json
.rasa/cache/tmpbuz1vp_i/: vocabularies.pkl
.rasa/cache/tmpcsp2m85h/: featurizer.json  ted_policy.data_example.pkl  ted_policy.tf_model.data-00000-of-00001  ted_policy.tf_model.index
.rasa/cache/tmpd0iss6ev/: vocabularies.pkl
.rasa/cache/tmpd3v9c0h0/: DIETClassifier.tf_model.index
.rasa/cache/tmpe1q1vikk/: memorized_turns.json
.rasa/cache/tmpewcc97sm/: DIETClassifier.data_example.pkl  DIETClassifier.index_label_id_mapping.json  DIETClassifier.label_data.pkl  DIETClassifier.sparse_feature_sizes.pkl  DIETClassifier.tf_model.index
.rasa/cache/tmpfkly61hq/: featurizer.json  ted_policy.tf_model.data-00000-of-00001  ted_policy.tf_model.index
.rasa/cache/tmph8ik9s_v/: featurizer.json  ted_policy.tf_model.data-00000-of-00001  ted_policy.tf_model.index
.rasa/cache/tmphbgswjqf/: DIETClassifier.data_example.pkl  DIETClassifier.sparse_feature_sizes.pkl  DIETClassifier.tf_model.index
.rasa/cache/tmpj7f9he9x/: featurizer.json  unexpected_intent_policy.data_example.st  unexpected_intent_policy.label_quantiles.st  (+2 more)
actions/: __init__.py  actions.py  actions_fallback.py
data/: nlu.yml  rules.yml  stories.yml
docs/: FUTURE_IDEAS.md  HOWTO_LOCAL_LLM.md  TODO.md  migration_guide.md
lyra_env/: pyvenv.cfg
lyra_env/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
src/lyra/: __init__.py  combined_memory_manager.py  config.py  faiss_memory.py  huggingface_integration.py  langchain_integration.py  langchain_local_integration.py  langchain_memory.py  llm_communication.py  main.py  memory_manager.py  model_manager.py  ocean.py  openai_integration.py  screen_reader.py  self_improvement.py  test_openai_integration.py  video_generation.py
(+64 files in other folders)
